Updating css to show roster correctly on small pages

--- a/client/src/componenets/Home/homeStyle.css
+++ b/client/src/componenets/Home/homeStyle.css
@@ -222,4 +222,7 @@
     .rosterWrapper {
         width: 100%;
     }
+    .rosterGroupHeader {
+        text-align: center;
+    }
 }
