--- a/client/src/componenets/Roster/playerStyle.css
+++ b/client/src/componenets/Roster/playerStyle.css
@@ -80,6 +80,9 @@
     .playerRow {
         width: 100%;
     }
+    .hasPlayerContainer {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 450px) {
